crates/tests/fixtures/harness/data/error/flags_with_args/input.rdl

#[winrt]
mod Test {
    #[repr(u32)]
    #[flags(something)]
    enum VirtualKeyModifiers {
        None = 0,
    }
}
        